# rust-am-clients

./: .gitignore  Cargo.toml  Makefile  README.md  Rodeo_AM_Repos_Install.md  hi.json  old_Makefile_protocols_w_args
executables/rust-am-client/: Cargo.toml
executables/rust-am-comms-client/: Cargo.toml
executables/rust-am-comms-server/: Cargo.toml
executables/rust-asp-client/: Cargo.toml
executables/rust-hamr-client/: Cargo.toml  README.md
executables/rust-hamr-client/src/: main.rs
executables/rust-resolute-client/: Cargo.toml
executables/rust-resolute-client/src/: main.rs
executables/rust-rodeo-client/: Cargo.toml  README.md
goldenFiles/: micro_evidence_golden.json  micro_evidence_golden.txt  readfile_range_evidence_golden.json  theorem_evidence_golden.json  theorem_test_output_golden.txt  theorems_env_dir_golden.txt  verus_evidence_golden.json  verus_workflow_evidence_golden.json
json_schemas/: appsumm_response_schema.json  asp_run_request_schema.json  copland_evidence_schema.json  copland_term_schema.json  cvm_run_message_schema.json  cvm_run_request_schema.json  rodeo_client_request_schema.json  rodeo_client_response_schema.json
lib/: Cargo.toml
lib/src/: clientArgs.rs  copland.rs  hamrLib.rs  lib.rs  tcp.rs
rodeo_configs/protocols/: protocol_autoverus.json  protocol_cargo_verus_hash_asp.json  protocol_cargo_verus_run_asp.json  protocol_cargo_verus_workflow.json  protocol_hamr_contracts.json  protocol_hamr_readfile_range_test.json  protocol_hamr_readfile_range_test_medium.json  protocol_hamr_readfile_range_test_short.json  protocol_micro.json  protocol_readfile_range.json  protocol_test.json  protocol_theorem.json  protocol_verus.json  protocol_verus_compare.json  protocol_verus_workflow.json  (+1 more)
scripts/: concretize_args.py
testing/: cds_tpm.json  cds_tpm_static.json  cert.json  cert_appr.json  coq_provision_all.json  env_resolute_cert_appr.json  env_resolute_micro.json  env_resolute_run_theorem_test.json  glob_comps_cert_appr.json  glob_comps_micro.json  glob_type_env_cert_appr.json  hamr_term.json  micro.json  plcmap_default.json  protocol_cds_badkey.json  protocol_micro.json  req_resolute_cert_appr.json  req_resolute_micro.json  req_resolute_run_theorem_test.json  res_env_default.json  res_env_micro.json  res_env_micro2.json  run_coq_all_appr.json  session_cds_tpm_bad_sig.json  session_micro.json  test_req_long.json  test_req_selinux_resp.json  test_resolute_req.json
(+119 files in other folders)
