[workspace]
members = [
  "lib/",
  "executables/*"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.125"
rust_am_lib = { git = "https://github.com/ku-sldg/rust-am-lib.git", branch = "copland-lib-pub-adts", version = "0.2.0"}