[workspace]
members = [
  "lib/",
  "executables/*"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = {version = "1.0.125", features = ["unbounded_depth"]}
rust_am_lib = { git = "https://github.com/ku-sldg/rust-am-lib.git", version = "0.2.0", branch="serde_fix"}