[package]
name = "lib"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = "1.5.0"
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
