[package]
name = "rust-resolute-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rust_am_lib = {workspace = true}
serde_json = { workspace = true }
serde = {version = "1.0.208", features = ["derive"]}
sha2 = "0.10.8"
lib = {path = "../../lib"}
tokio = { version = "1.44.2", features = ["full"] }